# amoCRM

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: config.yml
.github/workflows/: ci.yml  test.yml
api/: base_api.py  companies.py  contacts.py  deals.py  users.py
core/: __init__.py  allure.py  config.py  fixtures.py  http_client.py  logger.py  resilience.py
data/: test_data.json
demo-app/: app.py  main.py
fixtures/: api_fixtures.py  data_factory.py  data_fixtures.py
infra/: docker-compose.yml
models/: company.py  contact.py  deal.py  user.py
pipelines/api/: conftest.py
pipelines/api/tests/: test_auth.py  test_contracts.py  test_crud.py
pipelines/api/utils/: base_client.py  schema_validator.py
pipelines/crossbrowser/tests/: test_ui.py
pipelines/crossbrowser/utils/: grid_client.py
pipelines/db/tests/: test_consistency.py  test_integrity.py
pipelines/db/utils/: db_client.py
pipelines/k8s/tests/: test_health.py  test_smoke.py
pipelines/k8s/utils/: k8s_client.py
pipelines/kafka/tests/: test_async_flow.py  test_events.py
pipelines/kafka/utils/: kafka_client.py
pipelines/load/: locustfile.py
pipelines/ui/: conftest.py
pipelines/ui/tests/: test_ui_critical.py
pipelines/ui/utils/: playwright_client.py
src/api/: __init__.py  client.py  conftest.py  test_api.py
src/k8s/: test_k8s.py
src/kafka/: test_kafka.py
src/load/: locustfile.py
src/ui/: test_ui.py
tests/: conftest.py  test_companies.py  test_contacts.py  test_deals.py  test_integration.py  test_smoke.py  test_users.py
utils/: api_client.py  db_client.py  retry.py  wait.py
validators/: response_validator.py  schema_validator.py
