[project]
name = "amocrm-qa"
version = "1.0.0"
description = "QA Automation Framework for amoCRM"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
# Core (всегда нужны)
core = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
]

# API tests
api = [
    "requests>=2.32",
    "jsonschema>=4.23",
    "httpx>=0.28",
]

# UI tests (Playwright)
ui = [
    "playwright>=1.49",
]

# Selenium tests
selenium = [
    "selenium>=4.20",
]

# Database tests
db = [
    "psycopg2-binary>=2.9",
]

# Kafka tests
kafka = [
    "kafka-python>=2.0",
]

# Load tests
load = [
    "locust>=2.29",
]

# K8s tests
k8s = [
    "kubernetes>=29.0",
]

# Logs/Kibana
logs = [
    "elasticsearch>=8.17",
]

# Test tools
test = [
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "pytest-asyncio>=0.25",
    "allure-pytest>=2.13",
]

# All (полная установка)
all = [
    "amocrm-qa[core]",
    "amocrm-qa[api]",
    "amocrm-qa[ui]",
    "amocrm-qa[selenium]",
    "amocrm-qa[db]",
    "amocrm-qa[kafka]",
    "amocrm-qa[load]",
    "amocrm-qa[k8s]",
    "amocrm-qa[logs]",
    "amocrm-qa[test]",
]

[tool.pytest.ini_options]
minversion = "8.3"
asyncio_mode = "auto"
testpaths = ["src", "tests", "pipelines"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pytest.ini_options.markers]
api = "API tests"
db = "Database tests"
kafka = "Kafka tests"
load = "Load tests"
k8s = "Kubernetes tests"
ui = "UI tests"
logs = "Log analysis tests"
smoke = "Quick smoke tests"
critical = "Critical tests"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true